--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -219,27 +219,10 @@
                                             Reviews
                                         </h4>
 
-                                        <div class="user_review_container d-flex flex-column flex-sm-row">
-                                            <div class="user">
-                                                <div class="user_pic"></div>
-                                                <div class="user_rating">
-                                                    <ul class="star_rating">
-                                                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <div class="review">
-                                                <div class="review_date">27 Aug 2016</div>
-                                                <div class="user_name">Brandon William</div>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                            </div>
-                                        </div>
+                                        <br>
+                                        <!-- 상품 평점의 평균 -->
 
+                                        <button type="button" onclick="check">리뷰 등록하기</button>
 
                                         <div class="user_review_container d-flex flex-column flex-sm-row">
                                             <div class="user">
@@ -264,7 +247,7 @@
                                     </div>
 
 
-                                    <div class="col-lg-6 add_review_col">
+                                    <div class="col-lg-12 add_review_col">
 
                                         <div class="add_review">
                                             <form id="review_form" action="post">
