--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -31,17 +31,17 @@
 
                 기한이 얼마 안 남은 공구 (5개) 
                 <hr>
-                <th:block th:each=" deadMap : ${deadList} ">
-                    <th:block th:text="${deadMap.PRICE}"></th:block>
-                    <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
+                <th:block th:each=" deadOne : ${deadList} ">
+                    <th:block th:text="${deadOne.price}"></th:block>
+                    <th:block th:text="|D-${deadOne.dday}|"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 100px;">
                 </th:block>
                 <hr>
                 공구가 많이 열린 물품 (8개)
                 <hr>
-                <th:block th:each=" manyMap : ${manyList} ">
-                    <th:block th:text="${manyMap.PRICE}"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${manyMap.ITEMNO})}" style="width: 100px;">
+                <th:block th:each=" manyOne : ${manyList} ">
+                    <th:block th:text="${manyOne.price}"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${manyOne.itemno})}" style="width: 100px;">
                 </th:block>
                 <hr>
 
@@ -53,16 +53,16 @@
 
                 내 주위 실시간 공구 (5개)
                 <hr>
-                <th:block th:each=" aroundMap : ${aroundList} ">
-                    <th:block th:text="${aroundMap.PRICE}"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${aroundMap.ITEMNO})}" style="width: 100px;">
+                <th:block th:each=" aroundOne : ${aroundList} ">
+                    <th:block th:text="${aroundOne.price}"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}" style="width: 100px;">
                 </th:block>
                 기한이 얼마 안 남은 공구 (8개)
                 <hr>
-                <th:block th:each=" deadMap : ${deadList} ">
-                    <th:block th:text="${deadMap.PRICE}"></th:block>
-                    <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
+                <th:block th:each=" deadOne : ${deadList} ">
+                    <th:block th:text="${deadOne.price}"></th:block>
+                    <th:block th:text="|D-${deadOne.dday}|"></th:block>
+                    <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 100px;">
                 </th:block>
                 <hr>
                 
