--- a/src/main/resources/templates/gr/customer/myinfo.html
+++ b/src/main/resources/templates/gr/customer/myinfo.html
@@ -354,6 +354,7 @@
             width: 150px; 
             height: 40px;
             padding: 5px; 
+            padding-left: 20px;
             border: 1px solid #efefef;
         }
 
