--- a/src/main/resources/templates/gr/customer/mypage.html
+++ b/src/main/resources/templates/gr/customer/mypage.html
@@ -401,7 +401,7 @@
                                     <img th:src="@{/customer/seimage(itemno=${manyMap.ITEMNO})}" style="width: 193px; height: 250px;" >
                                 </div>
                                 <div class="text">
-                                    <div class="title" th:text="${manyMap.NAME}"></div>
+                                    <div class="title" th:text="${manyMap.NAME}"></div><div></div>
                                     <div class="price" id="price" th:text="${manyMap.PRICE}" ></div>
                                 </div>
                             </a>
