--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -142,25 +142,25 @@
                     
                         
                     
-                    <form th:action="@{/seller/item/insert.do}" method="post">
+                    <!-- <form th:action="@{/seller/item/insert.do}" method="post"> -->
                         
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">카테고리</span>
                             <!-- 대분류 -->
                             <select class="form-select" aria-label="Default select example" id="LcateSelect" th:field="${cate.Lcode}" onchange="updateMcateSelect()">
                                 <option value="000">대분류</option>
-                                <option th:each="obj : ${cate.Llist}" th:value="${obj.code.longValue()}" th:text="${obj.name}"></option>
+                                <option th:each="obj : ${cate.Llist}" th:value="${obj.code.longValue()}" th:text="${obj.name}" id="lcategory"></option>
                             </select>
                             <!-- 중분류 -->
                             <select class="form-select" aria-label="Default select example" id="McateSelect" th:field="${cate.Mcode}" onchange="updateScateSelect()">
                                 <option value="000">중분류</option>
-                                <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}" th:text="${obj1.name}"></option>
+                                <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}" th:text="${obj1.name}" id="mcategory"></option>
                                 <!-- <option value="">-- Select Middle Category --</option> -->
                             </select>
                             <!-- 소분류 -->
                             <select class="form-select" aria-label="Default select example" id="ScateSelect" th:field="${cate.Scode}" onchange="updateUrl()">
                                 <option value="000">소분류</option>
-                                <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}" th:text="${obj2.name}"></option>
+                                <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}" th:text="${obj2.name}" id="scategory"></option>
                                 <!-- <option value="">-- Select Small Category --</option> -->
                             </select><br>
                         </div>
@@ -169,22 +169,42 @@
                         
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">물품명</span>
-                            <input type="text" name="name" class="form-control" placeholder="" aria-label="Itemname" aria-describedby="basic-addon1">
+                            <input type="text" name="name" class="form-control" id="name" aria-label="Itemname" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">가격</span>
-                            <input type="text" name="price" class="form-control" placeholder="" aria-label="Itemname" aria-describedby="basic-addon1">
+                            <input type="text" name="price" class="form-control" id="price" aria-label="Itemname" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">수량</span>
-                            <input type="text" name="quantity" class="form-control" placeholder="" aria-label="Itemname" aria-describedby="basic-addon1">
+                            <input type="text" name="quantity" class="form-control" id="quantity" aria-label="Itemname" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">사업자번호</span>
-                            <input type="text" name="regNo" class="form-control" placeholder="" aria-label="Itemname" aria-describedby="basic-addon1">
+                            <input type="text" name="regNo" class="form-control" id="regNo" aria-label="Itemname" aria-describedby="basic-addon1">
                         </div>
-                        <button class="btn btn-primary" id="insertitem">등록</button>
-                    </form>
+                        <!-- ==================================== -->
+                        <!-- <input type="text" th:value="${ret.no}" id="itemno"> -->
+                        <button type="button" onclick="insertitem()">등록</button>
+                        <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#insertitem" onclick="insertitem()">등록</button>
+                        <!-- Modal -->
+                    <!-- </form> -->
+                    <div class="modal fade" id="insertitem" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="staticBackdropLabel">물품등록완료</h1>
+                            </div>
+                            <div class="modal-body">
+                                물품이 등록되었습니다. 이미지를 등록하시겠습니까?
+                            </div>
+                            <div class="modal-footer">
+                            <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal">아니요</button>
+                            <button type="submit" class="btn btn-primary" id="insertimage" onclick="insertimage()">네</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                     
 
 
@@ -225,6 +245,7 @@
         integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -275,6 +296,42 @@
     }
     
     </script>
+
+
+    <script th:inline="javascript">
+        async function insertitem() {
+            
+            const name = document.getElementById("name");
+            console.log(name);
+            const price = document.getElementById("price");
+            const quantity = document.getElementById("quantity");
+            const regNo = document.getElementById("regNo");
+            const scategory = document.getElementById("scategory");
+            const mcategory = document.getElementById("mcategory");
+            const lcategory = document.getElementById("lcategory");
+            
+            const url = /*[[@{/api/seller/insertitem.json}]]*/"";
+            console.log(url);
+            const headers = {"Content-Type":"application/json"};
+            const body = {name : name.value, price : price.value, quantity : quantity.value, regNo : regNo.value, scategoryCode : {code : scategory.value}};
+            const { data } = await axios.post(url, body, { headers:headers });
+            
+            console.log(data.result);
+            console.log(data.itemno);
+            // if(data.result != null){}
+            // 모달창에서 네 클릭시 새로등록한 물품번호를 받아 /seller/itemimage/selectlist.do?no=159 로 이동
+            document.getElementById('insertimage').addEventListener("click", clickFunction);
+            function clickFunction() {
+                window.location.href = `/SOBUN/seller/itemimage/selectlist.do?no=` + data.itemno;
+    
+            }
+        }
+        
+        
+        
+        </script>
+        
+
     <!-- <script>
         document.getElementById("insertitem").addEventListener("click", clickFunction);
 
