--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -31,8 +31,8 @@
                     <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="#!">주문</a>
-                            <a class="nav-link" href="#!">배송</a>
+                            <a class="nav-link" th:href="@{/seller/order/serch.do}">주문</a>
+                            <a class="nav-link" th:href="@{/seller/delivery/serch.do}">배송</a>
                         </nav>
                     </div>
 
@@ -46,8 +46,8 @@
                     <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="#!">등록</a>
-                            <a class="nav-link" href="#!">관리</a>
+                            <a class="nav-link" th:href="@{/seller/item/insert.do}">등록</a>
+                            <a class="nav-link" href="@{/seller/item/management.do}">관리</a>
                         </nav>
                     </div>
 
@@ -70,7 +70,7 @@
 
             const headers = { "Content-Type": "application/json" };
             const { data } = await axios.get(url, { headers: headers });
-            console.log('반환되는 결과', data);
+            // console.log('반환되는 결과', data);
 
             window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updateinfo.do}]]*/ + "";
         }
@@ -79,7 +79,7 @@
             url += `?redirect=updatepw`;
             const headers = { "Content-Type": "application/json" };
             const { data } = await axios.get(url, { headers: headers });
-            console.log('반환되는 결과', data);
+            // console.log('반환되는 결과', data);
 
             window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updatepw.do}]]*/ + "";
         }
