회원 아이디 정보 표시 부분수정

--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -55,7 +55,7 @@
             </div>
             <div class="sb-sidenav-footer">
                 <p th:text="'환영합니다,'" style="font-size: small;"></p>
-                <p th:text=" ${companyName} + '님!'" style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
+                <p th:text=" '[ '+ ${companyName} + ' ]'  + ' 님!'" style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
             </div>
         </nav>
     </div>
