--- a/src/main/resources/templates/se/customer/login.html
+++ b/src/main/resources/templates/se/customer/login.html
@@ -25,19 +25,27 @@
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 300px;">
 
-        <div class="container">
+        <div class="container text-center">
 
-            <form th:action="@{/customer/loginaction.do}" method="post" id="loginFrom">
-                <input type="text" name="id" placeholder="아이디" autofocus>
-                <input type="password" name="pw" placeholder="암호">
-                <input type="button" value="로그인" onclick="loginAction()">
+            <h3>LOGIN</h3>
+            <div>로그인</div>
+
+            <div class="m-4 p-1" style="background-color: #ccc;">
+                <a th:href="@{/customer/login.do}">로그인</a>
+                <a th:href="@{/customer/findid.do}">아이디찾기</a>
+                <a th:href="@{/customer/findpw.do}">비밀번호찾기</a>
+                <a th:href="@{/customer/join.do}">회원가입</a>
+            </div>
+            
+            <form class="position-relative" th:action="@{/customer/loginaction.do}" method="post" id="loginFrom">
+                <input class="w-25" type="text" name="id" placeholder="아이디" autofocus><br>
+                <input class="w-25 m-1" type="password" name="pw" placeholder="암호"><br>
+                <input class="w-25" type="button" value="로그인" onclick="loginAction()">
+                <a class="position-absolute" id="kakao-login-btn" href="javascript:loginWithKakao()"><img th:src="@{/images/se/kakao_login_button.png}" alt="" style="width: 50px;"></a>                    </div>
             </form>
-
-            <!-- 카카오로그인...화이팅 -->
-            <a id="kakao-login-btn" href="javascript:loginWithKakao()">
-                <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
-            </a>
         </div>
+
+        
 
     </div>
 
