--- a/src/main/resources/templates/jk/seller/login.html
+++ b/src/main/resources/templates/jk/seller/login.html
@@ -32,7 +32,7 @@
 					<hr />
 					<br>
 					<div class="form-floating mb-2">
-						<input type="text" id="id" name="no" class="form-control" />
+						<input type="number" id="id" name="no" class="form-control" />
 						<label for="id" class="form-label">사업자번호</label>
 					</div>
 					<div class="form-floating mb-2 ">
