--- a/src/main/resources/templates/jk/seller/mypage/updateinfo.html
+++ b/src/main/resources/templates/jk/seller/mypage/updateinfo.html
@@ -37,7 +37,7 @@
             <main style="padding-bottom: 10%; background-color: #ffffff;">
                 <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
                     <div class="container mt-5">
-                        <h1 class="mb-4"><strong>내정보 수정하기</strong></h1>4580
+                        <h1 class="mb-4"><strong>내정보 수정하기</strong></h1>
                         <hr />
                         <form id="form" th:action="@{/seller/updateinfo.do}" th:object="${seller}" method="post">
                             <input type="text" th:field="${seller.no}" hidden /><br />
@@ -76,7 +76,7 @@
                             </div>
                             <br>
                             <div class="mb-3 form-group">
-                                <label for="companyPhone" class="form-label">업체 전화번호 ('-'는 제외)</label>
+                                <label for="companyPhone" class="form-label">업체 전화번호 ( '-'는 제외 )</label>
                                 <input type="number" th:field="${seller.phone}" class="form-control" id="phone"
                                     name="phone" placeholder="업체 전화번호를 입력하세요" required>
                             </div>
