--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -14,9 +14,9 @@
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" onclick="pwCheck1()">
+                            <a class="nav-link" herf="#!" onclick="pwCheck1()">
                                 내정보 수정하기</a>
-                            <a class="nav-link" onclick="pwCheck2()">
+                            <a class="nav-link" herf="#!" onclick="pwCheck2()">
                                 비밀번호 변경하기</a>
                         </nav>
                     </div>
@@ -31,8 +31,8 @@
                     <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/seller/order/serch.do}">주문</a>
-                            <a class="nav-link" th:href="@{/seller/delivery/serch.do}">배송</a>
+                            <a class="nav-link" href="#!">주문</a>
+                            <a class="nav-link" href="#!">배송</a>
                         </nav>
                     </div>
 
@@ -46,8 +46,8 @@
                     <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/seller/item/insert.do}">등록</a>
-                            <a class="nav-link" href="@{/seller/item/management.do}">관리</a>
+                            <a class="nav-link" href="#!">등록</a>
+                            <a class="nav-link" href="#!">관리</a>
                         </nav>
                     </div>
 
@@ -55,7 +55,7 @@
             </div>
             <div class="sb-sidenav-footer">
                 <p th:text="'환영합니다,'" style="font-size: small;"></p>
-                <p th:text=" '[ '+ ${companyName} + ' ]'  + ' 님!'" style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
+                <p th:text=" '[ '+ ${companyName} + ' ]' + ' 님!'" style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
             </div>
         </nav>
     </div>
@@ -70,7 +70,7 @@
 
             const headers = { "Content-Type": "application/json" };
             const { data } = await axios.get(url, { headers: headers });
-            // console.log('반환되는 결과', data);
+            console.log('반환되는 결과', data);
 
             window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updateinfo.do}]]*/ + "";
         }
@@ -79,7 +79,7 @@
             url += `?redirect=updatepw`;
             const headers = { "Content-Type": "application/json" };
             const { data } = await axios.get(url, { headers: headers });
-            // console.log('반환되는 결과', data);
+            console.log('반환되는 결과', data);
 
             window.location.href = /*[[@{/seller/pwinfocheck.do?redirect=updatepw.do}]]*/ + "";
         }
