--- a/src/main/resources/templates/jk/seller/mypage/updateinfo.html
+++ b/src/main/resources/templates/jk/seller/mypage/updateinfo.html
@@ -50,7 +50,7 @@
                             <div class="mb-3 form-group">
                                 <label for="companyAddress" class="form-label">현재 등록된 주소</label>
                                 <input type="text" th:field="${seller.address}" class="form-control" id="oldaddress"
-                                    name="oldaddress" style="background-color:rgb(230, 229, 229);" readonly>
+                                    name="oldaddress" style="background-color:#e9ecef;" readonly>
                             </div>
                             <div class="mb-3 form-group">
                                 <label for="companyAddress" class="form-label">변경할 주소</label>
@@ -61,34 +61,55 @@
                                         <div class="col">
                                             <input type="text" name="address1" class="form-control"
                                                 id="sample6_postcode" placeholder="우편번호" readonly
-                                                style="background-color: rgb(230, 229, 229);">
+                                                style="background-color: #e9ecef;">
                                         </div>
                                         <div class="col">
                                             <input type="text" name="address2" id="sample6_address" class="form-control"
-                                                placeholder="주소" readonly style="background-color: rgb(230, 229, 229);">
+                                                placeholder="주소" readonly style="background-color: #e9ecef;">
                                         </div>
                                     </div>
                                     <input type="text" name="address3" class="form-control" id="sample6_detailAddress"
-                                        placeholder="상세주소">
+                                        placeholder="상세주소" disabled>
                                     <input type="text" name="address4" class="form-control" id="sample6_extraAddress"
                                         placeholder="추가정보" hidden>
                                 </div>
                             </div>
                             <br>
                             <div class="mb-3 form-group">
-                                <label for="companyPhone" class="form-label">업체 전화번호 ( '-'는 제외 )</label>
+                                <label for="companyPhone" class="form-label">전화번호 ( '-'는 제외 )</label>
                                 <input type="number" th:field="${seller.phone}" class="form-control" id="phone"
                                     name="phone" placeholder="업체 전화번호를 입력하세요" required>
                             </div>
                             <br>
                             <div class="mb-3 form-group">
-                                <label for="companyEmail" class="form-label">업체 이메일</label>
+                                <label for="companyEmail" id="lbl_CompanyEmail" class="form-label">현재 등록된 이메일</label>
                                 <input type="email" th:field="${seller.email}" class="form-control" id="email"
-                                    name="email" placeholder="업체 이메일을 입력하세요" required>
+                                    name="email" placeholder="업체 이메일을 입력하세요" style="background-color: #e9ecef;"readonly>
+                            </div>
+                            <div class="mb-3 form-group">
+                                <label for="new_Email" id="lbl_NewEmail"class="form-label">새 이메일</label>
+                                <div class="form-floating mb-2">
+                                    <div class="input-group">
+                                        <input type="email" id="new_Email" name="new_Email" class="form-control"
+                                            placeholder="email@example.com" />
+                                        <button type="button" id="emailVerificationBtn" class="btn btn-dark"
+                                            onclick="enableEmailVerification()">이메일 인증</button>
+                                    </div>
+                                </div>
+                                <div class="form-floating mb-2">
+                                    <input type="text" id="verificationCode" name="verificationCode" class="form-control"
+                                        hidden />
+                                    <label for="verificationCode" id="lbl_verificationCode" class="form-label" hidden>이메일 인증 코드</label>
+                                </div>
+            
+                                <div class="container text-center d-grid gap-2" style="padding: 0;">
+                                    <input type="button" id="verButton" class="btn btn-dark mb-3" value="인증 확인"
+                                        onclick="emailCodeCheck()" hidden>
+                                </div>
                             </div>
                             <br>
                             <hr>
-                            <button type="button" class="btn btn-outline-dark" onclick="updateAction()">수정하기</button>
+                            <button type="button" id="smtButton"class="btn btn-dark" onclick="updateAction()">수정하기</button>
                         </form>
                     </div>
                 </div>
@@ -111,9 +132,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Daum 주소찾기 CDN -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <!-- axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
 
 
-    <script>
+    <script th:inline="javascript">
         function updateAction() {
             //변수에 담아주기
             var name = document.getElementById("name");
@@ -122,6 +145,8 @@
             var sample6_postcode = document.getElementById("sample6_postcode");
             var sample6_detailAddress = document.getElementById("sample6_detailAddress");
             var form = document.getElementById("form");
+            var checkCode = 0; // 인증여부 확인용 변수
+
 
             if (name.value == "") {  // 이름을 입력했는지
                 alert("변경할 업체명을 입력해주세요.");
@@ -212,11 +237,100 @@
                         document.getElementById("sample6_address").value = addr;
                         // 커서를 상세주소 필드로 이동한다.
                         document.getElementById("sample6_detailAddress")
+                            .disabled = false;
+                        document.getElementById("sample6_detailAddress")
                             .focus();
                     }
                 }).open();
         }
 
+
+        // 이메일 인증코드 타이머
+        var verificationCodeEnabled = false; // 초기상태
+        var timerInterval;
+
+        async function enableEmailVerification() {
+            
+            if (document.getElementById("new_Email").value == "") { // 이메일값이 없을때 전송이 안되도록.
+                alert("이메일을 입력해주세요.")
+                return false;
+            }
+
+            if (!verificationCodeEnabled) { // if 이메일 인증버튼 클릭 시
+                document.getElementById("emailVerificationBtn").disabled = true; // 이메일 인증버튼 비활성화
+                document.getElementById("verificationCode").hidden = false; // 인증코드 입력칸 활성화
+                document.getElementById("verButton").hidden = false; // 인증버튼 활성화
+                document.getElementById("lbl_verificationCode").hidden = false; // 인증입력칸 라벨 활성화
+                document.getElementById("new_Email").readOnly = true; // 이메일 입력칸 수정 불가능 상태로 전환
+                document.getElementById("smtButton").disabled = true; // submit 버튼 비활성화
+                startTimer(); // 타이머 시작
+                verificationCodeEnabled = true;
+
+                const url = /*[[@{/api/sellercodesend.json}]]*/"";
+                const headers = { "Content-Type": "application/json" };
+                const body = document.getElementById("new_Email").value;
+                const { data } = await axios.post(url, body, { headers: headers });
+
+                console.log('반환되는 결과', data); // 결과 확인 완료. 작동잘됨.
+            }
+        }
+
+        function startTimer() {
+            var duration = 180; // 타이머는 3분
+            var timer = duration, minutes, seconds;
+            timerInterval = setInterval(function () {
+                minutes = parseInt(timer / 60, 10);
+                seconds = parseInt(timer % 60, 10);
+
+                minutes = minutes < 10 ? "0" + minutes : minutes;
+                seconds = seconds < 10 ? "0" + seconds : seconds;
+
+                document.getElementById("lbl_verificationCode").textContent = "남은 시간 " + minutes + ":" + seconds;
+
+                if (--timer < 0) { // 타이머 시간 종료시
+                    clearInterval(timerInterval); // 다시 처음상태로 되돌아감.
+                    document.getElementById("emailVerificationBtn").disabled = false;
+                    document.getElementById("verificationCode").disabled = true;
+                    document.getElementById("lbl_verificationCode").textContent = "이메일 인증 코드";
+                    document.getElementById("new_Email").readOnly = false;
+                    verificationCodeEnabled = false;
+                }
+            }, 1000);
+        }
+
+        async function emailCodeCheck() {
+            if (document.getElementById("verificationCode").value == "") { // 이메일값이 없을때 전송이 안되도록.
+                alert("인증코드를 입력해주세요.")
+                return false;
+            }
+
+            const url = /*[[@{/api/sellercodecheck.json}]]*/"";
+            const headers = { "Content-Type": "application/json" };
+            const body = document.getElementById("verificationCode").value;
+            const { data } = await axios.post(url, body, { headers: headers });
+            console.log('반환되는 결과', data);
+
+            if (data.chk === 0) { // 이메일값이 없을때 전송이 안되도록.
+                alert("인증번호가 일치하지 않습니다.")
+                return false;
+            } else if (data.chk === 1) {
+                alert("인증이 완료되었습니다.")
+                checkCode = 1;                
+                clearInterval(timerInterval);
+                document.getElementById("verificationCode").disabled = true;
+                document.getElementById("lbl_verificationCode").textContent = "인증이 완료되었습니다.";
+                document.getElementById("lbl_verificationCode").style.color = 'blue';
+                document.getElementById("verButton").hidden = true; // 인증버튼 숨기기
+                document.getElementById("smtButton").disabled = false; // 수정버튼 입력칸 활성화
+                document.getElementById("verificationCode").hidden = true; // 인증코드 입력칸 숨기기
+                document.getElementById("lbl_verificationCode").hidden = true; // 인증입력칸 라벨 숨기기
+                document.getElementById("emailVerificationBtn").hidden = true;
+                document.getElementById("lbl_CompanyEmail").textContent = "새로 변경될 이메일";
+                document.getElementById("email").value = document.getElementById("new_Email").value;
+                document.getElementById("lbl_NewEmail").hidden = true;
+                document.getElementById("new_Email").hidden = true;
+            }
+        }
     </script>
 </body>
 
