--- a/src/main/resources/templates/se/customer/join.html
+++ b/src/main/resources/templates/se/customer/join.html
@@ -88,7 +88,7 @@
                 document.getElementById("idcheck").innerText = "error";
             }
 
-        } el {
+        } else {
             document.getElementById("idcheck").innerText = "아이디를 입력하세요";
         }
 
