--- a/src/main/resources/templates/mj/seller/updateitem.html
+++ b/src/main/resources/templates/mj/seller/updateitem.html
@@ -42,12 +42,16 @@
                     <a th:href="@{/seller/item/management.do}"><button class="btn btn-primary">물품리스트</button></a>
                     <form th:action="@{/seller/item/updateitemaction.do}" method="post">
                         <div class="row">
-                            <div class="col-8">
-                                <p>col-8</p>
+                            <!-- <div class="col-auto" style="background-color: lime;">
+                                <p>물품번호</p>                                
                             </div>
+                            <div class="col-auto">
+                                <p>물품명</p>
+                            </div>
+
                             <div class="col-4" style="background-color: black;">
                                 <p>col-4</p>
-                            </div>
+                            </div> -->
                         </div>
 
                         <table class="table caption-top" >
